--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        backgroun:linear-gradient(top left,rgb(100,100,100), rgb(0,0,0));
+        /*BC234B*/
+    </style>
 </head>
 <body>
     
