--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
     <style>
         body {
+
             background: linear-gradient(top left, rgb(100, 100, 100), rgb(0, 0, 0));
+            background-color: aqua;
         }
 
         /*BC234B*/
