--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <style>
         body {
 
-            background: linear-gradient(top left, rgb(100, 100, 100), rgb(0, 0, 0));
+            /*background: linear-gradient(top left, rgb(100, 100, 100), rgb(0, 0, 0));
+            */
             background-color: aqua;
         }
 
@@ -18,7 +19,7 @@
 </head>
 
 <body>
-
+fff
 </body>
 
 </html>
