--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <title>Document</title>
     <style>
         body {
-
-            /*background: linear-gradient(top left, rgb(100, 100, 100), rgb(0, 0, 0));
-            */
-            background-color: aqua;
+            background: linear-gradient(top left, rgb(100, 100, 100), rgb(0, 0, 0));
         }
 
         /*BC234B*/
@@ -19,7 +16,9 @@
 </head>
 
 <body>
-fff
+    <div class="loginBox">
+
+    </div>
 </body>
 
 </html>
